[gd_scene load_steps=6 format=2]

[ext_resource path="res://Obstacles/FireSpinner/Fire_Spinner.gd" type="Script" id=1]
[ext_resource path="res://Obstacles/FireSpinner/fire_spinner.png" type="Texture" id=2]
[ext_resource path="res://Obstacles/FireSpinner/Soulfire.tscn" type="PackedScene" id=3]
[ext_resource path="res://Obstacles/Audio/explode3.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="Fire_Spinner" type="Node2D"]
script = ExtResource( 1 )

[node name="Spinner" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Fire" parent="Spinner" instance=ExtResource( 3 )]
position = Vector2( 100, 0 )

[node name="Fire2" parent="Spinner" instance=ExtResource( 3 )]
position = Vector2( 200, 0 )

[node name="Fire3" parent="Spinner" instance=ExtResource( 3 )]
position = Vector2( 300, 0 )

[node name="Fire4" parent="Spinner" instance=ExtResource( 3 )]
position = Vector2( -100, 0 )

[node name="Fire5" parent="Spinner" instance=ExtResource( 3 )]
position = Vector2( -200, 0 )

[node name="Fire6" parent="Spinner" instance=ExtResource( 3 )]
position = Vector2( -300, 0 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Enemies",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Flash_Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Explode_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 6.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="finished" from="Explode_SFX" to="." method="_on_Explode_SFX_finished"]
